# nile

./: .gitignore  Akshay Rana  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASING.md  example.env  nile.py  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
artifacts/: example.json
artifacts/abis/: example.json
contracts/: EthAccount.cairo  example.cairo  library.cairo
docs/: antora.yml  package.json
docs/modules/ROOT/: nav.adoc
nile/: compile.py  config.py  constants.py  install.py  main.py
scripts/: add_funds.py  script.py
src/nile/: __init__.py  accounts.py  cli.py  common.py  compile.py  constants.py  deployments.py  devnet.py  install.py  main.py  nre.py  signer.py  starknet_cli.py  test.py
src/nile/artifacts/: Account.json
src/nile/base_project/: .env  .gitignore
src/nile/commands/: __init__.py  account.py  call.py  clean.py  compile.py  deploy.py  fuse.py  init.py  install.py  invoke.py  node.py  proxy.py  test.py  version.py
src/nile/core/: account.py  call_or_invoke.py  clean.py  compile.py  declare.py  deploy.py  init.py  install.py  node.py  plugins.py  run.py  test.py  utils.py  version.py
src/nile/starknet_cli/: __init__.py  deploy_account.py
src/nile/utils/: __init__.py  common.py  debug.py  get_nonce.py  (+6 more)
tests/: __init__.py  conftest.py  test_accounts.py  test_accounts_file.py  test_cli.py  test_common.py  test_deployments.py  test_main.py  test_nre.py  test_signer.py  test_starknet_cli.py
tests/commands/: test_account.py  test_clean.py  test_compile.py  test_debug.py  test_declare.py  test_deploy.py  test_get_accounts.py  test_get_balance.py  test_get_nonce.py  test_locate_errors.py  test_node.py  test_status.py  test_test.py
tests/core/: test_plugins.py  test_utils.py
tests/mocks/: mock_account.py  mock_response.py
(+53 files in other folders)
