[metadata]
name = cairo-nile
version = attr: nile.__version__
description = StarkNet/Cairo development toolbelt
author = Martin Triay
author_email = martriay@gmail.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/martriay/nile
platforms = any
classifiers =
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

python_requires = >=3.8,<3.10

install_requires =
    anyio>=3.6.1
    asyncclick>=8.1.3.4
    click>=8.0,<9.0
    importlib-metadata>=4.0
    python-dotenv>=0.19.2
    starknet-devnet>=0.4.3
    cairo-lang>=0.10.3
    pytest>=7.1.3
    pytest-asyncio>=0.19.0
    requests>=2.28.1

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    setuptools
    tox
    twine
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    nile = nile.cli:cli

[tool:pytest]
addopts =
    --cov nile --cov-report term-missing
    --verbose
markers =
    end_to_end: End-to-end tests, potentially slow.
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
per_file_ignores =
    # ignore docstrings in tests
    tests/*:D103
